Added website link to share message / Added website link to info page

--- a/config-app.json
+++ b/config-app.json
@@ -1,4 +1,5 @@
 {
     "streamingURL": "http://audio1.meway.tv:8066/status-json.xsl",
-    "description": "Frequenza Corce Rossa è la nuova app della CRI. Attraverso i nostri pdocast e in compagnia di Gerald andremo alla scoperta delle attività e dei progetti dell'Associazione. Frequenza Croce Rossa è un cuore rosso che batte ogni giorno. Perché le richieste di aiuto sono ovunque: piccole o grandi, noi le ascoltiamo tutte"
+    "description": "Frequenza Corce Rossa è la nuova app della CRI. Attraverso i nostri pdocast e in compagnia di Gerald andremo alla scoperta delle attività e dei progetti dell'Associazione. Frequenza Croce Rossa è un cuore rosso che batte ogni giorno. Perché le richieste di aiuto sono ovunque: piccole o grandi, noi le ascoltiamo tutte",
+    "website": "https://www.cri.it/"
 }
