--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.0.5",
     "react": "16.9.0",
     "react-native": "0.61.5",
+    "react-native-bootsplash": "^1.2.1",
     "react-native-elements": "^1.2.7",
     "react-native-flex-image": "^1.3.0",
     "react-native-gesture-handler": "^1.6.0",
